tests/src/frontend/typechecking/invalid/dependent_generic_args4.sk
class Foo<T>(x: T)

fun foo<T2: Foo<T>, T>(): void {
  void
}
